admission/ValidatingAdmissionPolicy/policies/run-as-nonroot/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as-nonroot-initcontainers
  annotations:
    kubeapt.io/uuid: "826c2137-b602-4591-ac39-d2bcd8c826a6"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
